✨ Add api to deactivate workers
